--- a/ecom-website/src/components/Header/Header.css
+++ b/ecom-website/src/components/Header/Header.css
@@ -1,17 +1,25 @@
 .linklist{
     display: flex;
-    min-width: 100%;
+    justify-content: center;
+    min-width: 90%;
 }
 .links{
     
-    padding-right: 20%;
+    padding-right: 5%;
 }
 .cartbtn{
-    margin-left: 48%;
     float: right;
+    max-width: 10%;
 }
 .header{
     background-color: aquamarine;
     text-align: center;
     min-width: 100%;
 }
+.navbar{
+    margin-left: 5%;
+    display: flex;
+}
+#linklist  a.active {
+    color: red;
+  }
